@@ -1,18 +1,19 @@
 package com.example.HRMS.Backend.service.impl;
 
 
+//import com.example.HRMS.Backend.dto.ManagerChain;
 import com.example.HRMS.Backend.dto.OrgChart;
 import com.example.HRMS.Backend.model.Employee;
 import com.example.HRMS.Backend.repository.EmployeeRepository;
+import com.example.HRMS.Backend.service.OrgChartService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public class OrgChartServiceImpl {
+public class OrgChartServiceImpl implements OrgChartService {
 
     private final EmployeeRepository empRepo;
 
@@ -26,33 +27,40 @@ public class OrgChartServiceImpl {
         this.modelMapper=modelMapper;
     }
 
+    //it set parent chain and report of sub employees for given employee id
+    @Override
     public OrgChart getEmployeeOrgChart(Long empId) {
         Employee employee = empRepo.findById(empId)
                 .orElseThrow(() -> new RuntimeException("Employee not found"));
 
         OrgChart dto = modelMapper.map(employee, OrgChart.class);
 
+//        List<ManagerChain> parentChain = empRepo.getUpwardManagerChainEntities(empId);
+//        dto.setManagerChain(parentChain.stream()
+//                .map(e -> modelMapper.map(e, OrgChart.class))
+//                .collect(Collectors.toList()));
+
         List<Object[]> parentChain = empRepo.getUpwardManagerChainEntities(empId);
 
         dto.setManagerChain(
                 parentChain.stream()
-                        .map(e -> {
+                        .map(object -> {
                             OrgChart oc = new OrgChart();
-                            oc.setEmployeeId((Long) e[0]);
+                            oc.setEmployeeId((Long) object[0]);
                             Employee employee1 = empRepo.findEmployeeById(oc.getEmployeeId());
-                            oc.setFirstName((String) e[1]);
-                            oc.setLastName((String) e[2]);
+                            oc.setFirstName((String) object[1]);
+                            oc.setLastName((String) object[2]);
                             oc.setDepartmentName(employee1.getFkDepartment().getDepartmentName());
                             oc.setPositionName(employee1.getFkPosition().getPositionName());
                             return oc;
-                        })
-                        .collect(Collectors.toList())
+                        }).toList()
         );
 
         List<Employee> reports = empRepo.findByFkManagerEmployeeId(empId);
         dto.setDirectReports(reports.stream()
                 .map(e -> modelMapper.map(e, OrgChart.class))
-                .collect(Collectors.toList()));
+                .toList()
+        );
 
         return dto;
     }
